header alignment fixed, should display properly in browser and at print.

--- a/sass/form.scss
+++ b/sass/form.scss
@@ -60,7 +60,7 @@ input[type=number]::-webkit-inner-spin-button {
 
 .placement-fix
 {
-  margin-left: 0.5px;
+  margin-left: 0cm;
 }
 
 .override-header
