--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -409,7 +409,7 @@ input[type=number]::-webkit-inner-spin-button {
   -webkit-print-color-adjust: exact; }
 
 .placement-fix {
-  margin-left: 0.5px; }
+  margin-left: 0cm; }
 
 .override-header {
   width: 99.9%; }
